# kiff-ai

./: .cookies  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_LOG.md  Dockerfile.auth  Dockerfile.complete  Dockerfile.final  Dockerfile.fixed  Dockerfile.full  Dockerfile.local  Dockerfile.local-clean  Dockerfile.minimal  Dockerfile.minimal-fix  Dockerfile.production  Dockerfile.requirements  Dockerfile.working  LANGTRACE_INTEGRATION.md  Makefile  NEXTAUTH_SETUP.md  Procfile  README.md  STRIPE_SETUP.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  VM_INTEGRATION.md  admin_preindex_apis.py  apprunner.yaml  aws-alb-config.yaml  aws-alb-simple.yaml  aws-ecs-secure-task.json  aws-ecs-service.json  aws-secure-networking.yaml  deploy_generated_app.json  docker-compose.dev.yml  docker-compose.kiff.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.sandbox.yml  docker-compose.vm-service.yml  (+22 more)
backend/: .gitignore  Dockerfile  README.md  admin_preindex.py  requirements.txt  test_agno_streaming.py  vercel.json
backend-lite-v2/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.core  Dockerfile.dev  Dockerfile.fast  Dockerfile.optimized  apprunner-fresh-deploy.json  apprunner-update.json  build.sh  cookies.txt  dynamodb-policy.json  init_database.py  mark_apis_ready.py  migrate_database.py  phase2_agentic_chunking.py  phase2_semantic_chunking.py  requirements-core.txt  requirements-minimal.txt  requirements.txt  update_api_visibility.py
backend-lite-v2/api_urls_extraction/: FINAL_RESULTS.md  _urls.json  agno_urls.json  all_api_names.txt  all_api_urls.txt  anthropic_stats.txt  anthropic_urls.json  apify_urls.json  assemblyai_urls.json  autogen_urls.json  clipdrop_urls.json  cohere_urls.json  composio_urls.json  crewai_urls.json  deepai_urls.json  deepgram_urls.json  elevenlabs_urls.json  fliki_urls.json  freepik_urls.json  google_gemini_urls.json  gradio_urls.json  groq_urls.json  heygen_urls.json  huggingface_urls.json  ideogram_urls.json  langchain_urls.json  langgraph_urls.json  leonardo_urls.json  luma_urls.json  metagpt_urls.json  mistral_urls.json  murf_urls.json  openai_stats.txt  openai_urls.json  pinecone_urls.json  plan_index.md  playht_urls.json  rasa_urls.json  relevance_urls.json  runway_urls.json  (+9 more)
backend-lite-v2/app/: __init__.py  db_core.py  main.py  models_kiffs.py
backend-lite-v2/deploy/: README.md  aws-apprunner-optimized.yaml
backend-lite-v2/docs/: embedder-architecture.md  nivel-1-vision-general.md  nivel-2-medium-term-plan.md  nivel-3-tareas-inmediatas.md
docs/: BILLING_CONSENT_WORKFLOW.md  DEPRECATED-Level_2_Context_Window_Plan.md  Level_1_Project_Overview.md  Level_3_Immediate_Todo.md  TERRAFORM_AWS_DEPLOYMENT.md  level-1-vision.md  level-2-context-window.md  level-3-immediate-todos.md
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-lite/: .env.example  .env.local.example  .env.production  .env.vercel  .eslintrc.json  cookies.txt  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
micro-vm-service/: README.md  docker-compose.yml
ml-service/: Dockerfile  requirements.txt
private/: README.md  aws.env.example  bootstrap_aws_env.sh  deploy_v2.sh  legacy_backend.md  terraform_refs.md  trust.json
storybookv0/: package.json  tailwind.config.js  tsconfig.json  vercel.json
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+519 files in other folders)
